Исправлены формы (в фильтрах теги input и label обернуты в li вместо p). Исправлены карточки товаров (заговловки и картинки, обернутые в ссылки, ведущие на одну страницу, удалены и вместо этого обернуты в одну общую ссылку).

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -91,63 +91,63 @@
       </section>
     </main>
     <footer class="page-footer">
-        <p class="page-footer__contacts">
-          Барбершоп &laquo;Borodinski&raquo;<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
-          Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
-        </p>
-        <div class="page-footer__social">
-          <b class="page-footer__bold-text">Давайте дружить!</b>
-          <ul class="page-footer__social-list">
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
-            </li>
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
-            </li>
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
-            </li>
-          </ul>
-        </div>
-        <p class="page-footer__copyright">
-          <b class="page-footer__bold-text">Разработано:</b>
-          <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
-        </p>
-      </footer>
+      <p class="page-footer__contacts">
+        Барбершоп &laquo;Borodinski&raquo;<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
+        Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
+      </p>
+      <div class="page-footer__social">
+        <b class="page-footer__bold-text">Давайте дружить!</b>
+        <ul class="page-footer__social-list">
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
+      <p class="page-footer__copyright">
+        <b class="page-footer__bold-text">Разработано:</b>
+        <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+      </p>
+    </footer>
 
-      <section class="modal modal-login">
-        <h2 class="modal-login__headline">Личный кабинет</h2>
-        <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
-        <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
-          <p class="modal-login__form-paragraph">
-            <label class="visually-hidden" for="user-login">Логин</label>
-            <input class="modal-login__form-input" type="text" name="login" id="user-login" placeholder="Логин">
-          </p>
-          <p class="modal-login__form-paragraph">
-            <label class="visually-hidden" for="user-password">Пароль</label>
-            <input class="modal-login__form-input" type="password" name="login" id="user-password" placeholder="Пароль">
-          </p>
-          <p class="modal-login__form-paragraph">
-            <label class="modal-login__form-label" for="remember-me">
-              <input class="visually-hidden" type="checkbox" name="remember" id="remember-me" checked>
-              <span class="modal-login__form-indicator"></span>
-              Запомните меня
-            </label>
-            <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
-          </p>
-          <button class="modal-login__form-submit" type="submit">Войти</button>
-        </form>
-        <button class="modal-close"></button>
-      </section>
+    <section class="modal modal-login">
+      <h2 class="modal-login__headline">Личный кабинет</h2>
+      <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
+      <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="modal-login__form-paragraph">
+          <label class="visually-hidden" for="user-login">Логин</label>
+          <input class="modal-login__form-input" type="text" name="login" id="user-login" placeholder="Логин">
+        </p>
+        <p class="modal-login__form-paragraph">
+          <label class="visually-hidden" for="user-password">Пароль</label>
+          <input class="modal-login__form-input" type="password" name="login" id="user-password" placeholder="Пароль">
+        </p>
+        <p class="modal-login__form-paragraph">
+          <label class="modal-login__form-label" for="remember-me">
+            <input class="visually-hidden" type="checkbox" name="remember" id="remember-me" checked>
+            <span class="modal-login__form-indicator"></span>
+            Запомните меня
+          </label>
+          <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
+        </p>
+        <button class="modal-login__form-submit button" type="submit">Войти</button>
+      </form>
+      <button class="modal-close" type="button"></button>
+    </section>
 
-      <section class="modal modal-map">
-        <h2 class="visually-hidden">Как до нас добраться</h2>
-        <a class="modal-map__link" href="https://yandex.ru/maps" aria-label="Яндекс карты" target="_blank">
-          <img class="modal-map__img" src="img/map.jpg" width="766" height="560" alt="Карта">
-        </a>
-        <button class="modal-close"></button>
-      </section>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <p class="modal-map__pic">
+        <img class="modal-map__img" src="img/map.jpg" width="766" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      </p>
+      <button class="modal-close" type="button"></button>
+    </section>
   </body>
 </html>
