--- a/catalog.html
+++ b/catalog.html
@@ -52,74 +52,54 @@
 
       <section class="filters">
         <h2 class="visually-hidden">Фильтры товаров</h2>
-        <form class="filters__form" action="https://echo.htmlacademy.ru" method="post">
+        <form class="filters__form" action="https://echo.htmlacademy.ru" method="get">
           <fieldset class="filters__form-manufacturers">
             <legend class="filters__form-legend">Производители:</legend>
-            <p class="filters__form-paragraph">
-              <label class="filters__form-label" for="baxter">
+            <ul class="filters__form-list">
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="checkbox" name="baxter-of-california" id="baxter" checked>
-                <span class="filters__form-indicator"></span>
-                Baxter of California
-              </label>
-            </p>
-            <p class="filters__form-paragraph">
-              <label class="filters__form-label" for="natty">
+                <label class="filters__form-label" for="baxter">Baxter of California</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="checkbox" name="mr-natty" id="natty">
-                <span class="filters__form-indicator"></span>
-                Mr Natty
-              </label>
-            </p>
-            <p class="filters__form-paragraph">
-              <label class="filters__form-label" for="suavecito-id">
+                <label class="filters__form-label" for="natty">Mr Natty</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="checkbox" name="suavecito" id="suavecito-id" checked>
-                <span class="filters__form-indicator"></span>
-                Suavecito
-              </label>
-            </p><p class="filters__form-paragraph">
-              <label class="filters__form-label" for="malin">
+                <label class="filters__form-label" for="suavecito-id">Suavecito</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="checkbox" name="malin-goetz" id="malin">
-                <span class="filters__form-indicator"></span>
-                Malin+Goetz
-              </label>
-            </p><p class="filters__form-paragraph">
-              <label class="filters__form-label" for="murray">
+                <label class="filters__form-label" for="malin">Malin+Goetz</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="checkbox" name="murray-s" id="murray">
-                <span class="filters__form-indicator"></span>
-                Murray's
-              </label>
-            </p><p class="filters__form-paragraph">
-              <label class="filters__form-label" for="american">
+                <label class="filters__form-label" for="murray">Murray's</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="checkbox" name="american-crew" id="american" checked>
-                <span class="filters__form-indicator"></span>
-                American crew
-              </label>
-            </p>
+                <label class="filters__form-label" for="american">American crew</label>
+              </li>
+            </ul>
           </fieldset>
           <fieldset class="filters__form-category">
             <legend class="filters__form-legend">Группы товаров:</legend>
-            <p class="filter__form-paragraph">
-              <label class="filter__form-label" for="shaving">
+            <ul class="filters__form-list">
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="radio" name="product-group" id="shaving">
-                <span class="filter__form-indicator-category"></span>
-                Бритвенные принадлежности
-              </label>
-            </p>
-            <p class="filter__form-paragraph">
-              <label class="filter__form-label" for="care-products">
+                <label class="filter__form-label" for="shaving">Бритвенные принадлежности</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="radio" name="product-group" id="care-products" checked>
-                <span class="filter__form-indicator-category"></span>
-                Средства для ухода
-              </label>
-            </p>
-            <p class="filter__form-paragraph">
-              <label class="filter__form-label" for="accessories">
+                <label class="filter__form-label" for="care-products">Средства для ухода</label>
+              </li>
+              <li class="filters__form-option">
                 <input class="visually-hidden" type="radio" name="product-group" id="accessories">
-                <span class="filter__form-indicator-category"></span>
-                Аксессуары
-              </label>
-            </p>
+                <label class="filter__form-label" for="accessories">Аксессуары</label>
+              </li>
+            </ul>
           </fieldset>
-          <button class="filter__form-submit" type="submit">Показать</button>
+          <button class="filter__form-submit button" type="submit">Показать</button>
         </form>
       </section>
 
@@ -127,17 +107,15 @@
         <h2 class="visually-hidden">Товары</h2>
         <ul class="products__list">
           <li class="products__card">
-            <h3 class="products__card-headline">
-              <a class="products__card-link" href="catalog-item.html">
+            <a class="products__card-link" href="catalog-item.html">
+              <h3 class="products__card-headline">
                 <span class="products__card-category">Набор для путешествий</span>
                 <span class="products__card-title">&laquo;Baxter of California&raquo;</span>
-              </a>
-            </h3>
-            <p class="products__card-image">
-              <a class="products__card-link-img" href="catalog-item.html" aria-label="Набор для путешествий Baxter of California">
+              </h3>
+              <p class="products__card-image">
                 <img class="products__card-img" src="img/product-card-1.jpg" width="220" height="165" alt="Набор для путешествий &laquo;Baxter of California&raquo;">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="products__card-price">
               <b class="products__card-cost card-price">2 900 &#8381;</b>
               <a class="products__card-button button" href="buy.html">Купить</a>
@@ -145,17 +123,15 @@
           </li>
 
           <li class="products__card">
-            <h3 class="products__card-headline">
-              <a class="products__card-link" href="catalog-item.html">
+            <a class="products__card-link" href="catalog-item.html">
+              <h3 class="products__card-headline">
                 <span class="products__card-category">Увлажняющий кондиционер</span>
                 <span class="products__card-title">&laquo;Baxter of California&raquo;</span>
-              </a>
-            </h3>
-            <p class="products__card-image">
-              <a class="products__card-link-img" href="catalog-item.html" aria-label="Увлажняющий кондиционер Baxter of California">
+              </h3>
+              <p class="products__card-image">
                 <img class="products__card-img" src="img/product-card-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер &laquo;Baxter of California&raquo;">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="products__card-price">
               <b class="products__card-cost card-price">750 &#8381;</b>
               <a class="products__card-button button" href="buy.html">Купить</a>
@@ -163,17 +139,15 @@
           </li>
 
           <li class="products__card">
-            <h3 class="products__card-headline">
-              <a class="products__card-link" href="catalog-item.html">
+            <a class="products__card-link" href="catalog-item.html">
+              <h3 class="products__card-headline">
                 <span class="products__card-category">Гель для волос</span>
                 <span class="products__card-title">&laquo;Suavecito&raquo;</span>
-              </a>
-            </h3>
-            <p class="products__card-image">
-              <a class="products__card-link-img" href="catalog-item.html" aria-label="Гель для волос Suavecito">
+              </h3>
+              <p class="products__card-image">
                 <img class="products__card-img" src="img/product-card-3.jpg" width="220" height="165" alt="Гель для волос &laquo;Suavecito&raquo;">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="products__card-price">
               <b class="products__card-cost card-price">290 &#8381;</b>
               <a class="products__card-button button" href="buy.html">Купить</a>
@@ -181,17 +155,15 @@
           </li>
 
           <li class="products__card">
-            <h3 class="products__card-headline">
-              <a class="products__card-link" href="catalog-item.html">
+            <a class="products__card-link" href="catalog-item.html">
+              <h3 class="products__card-headline">
                 <span class="products__card-category">Глина для укладки волос</span>
                 <span class="products__card-title">&laquo;American crew&raquo;</span>
-              </a>
-            </h3>
-            <p class="products__card-image">
-              <a class="products__card-link-img" href="catalog-item.html" aria-label="Глина для укладки волос American crew">
+              </h3>
+              <p class="products__card-image">
                 <img class="products__card-img" src="img/product-card-4.jpg" width="220" height="165" alt="Глина для укладки волос &laquo;American crew&raquo;">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="products__card-price">
               <b class="products__card-cost card-price">500 &#8381;</b>
               <a class="products__card-button button" href="buy.html">Купить</a>
@@ -199,17 +171,15 @@
           </li>
 
           <li class="products__card">
-            <h3 class="products__card-headline">
-              <a class="products__card-link" href="catalog-item.html">
+            <a class="products__card-link" href="catalog-item.html">
+              <h3 class="products__card-headline">
                 <span class="products__card-category">Гель для волос</span>
                 <span class="products__card-title">&laquo;American crew&raquo;</span>
-              </a>
-            </h3>
-            <p class="products__card-image">
-              <a class="products__card-link-img" href="catalog-item.html" aria-label="Гель для волос American crew">
+              </h3>
+              <p class="products__card-image">
                 <img class="products__card-img" src="img/product-card-5.jpg" width="220" height="165" alt="Гель для волос &laquo;American crew&raquo;">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="products__card-price">
               <b class="products__card-cost card-price">300 &#8381;</b>
               <a class="products__card-button button" href="buy.html">Купить</a>
@@ -217,17 +187,15 @@
           </li>
 
           <li class="products__card">
-            <h3 class="products__card-headline">
-              <a class="products__card-link" href="catalog-item.html">
+            <a class="products__card-link" href="catalog-item.html">
+              <h3 class="products__card-headline">
                 <span class="products__card-category">Набор для бритья</span>
                 <span class="products__card-title">&laquo;Baxter of California&raquo;</span>
-              </a>
-            </h3>
-            <p class="products__card-image">
-              <a class="products__card-link-img" href="catalog-item.html" aria-label="Набор для бритья Baxter of California">
+              </h3>
+              <p class="products__card-image">
                 <img class="products__card-img" src="img/product-card-6.jpg" width="220" height="165" alt="Набор для бритья &laquo;Baxter of California&raquo;">
-              </a>
-            </p>
+              </p>
+            </a>
             <p class="products__card-price">
               <b class="products__card-cost card-price">2 900 &#8381;</b>
               <a class="products__card-button button" href="buy.html">Купить</a>
@@ -236,7 +204,7 @@
         </ul>
         <ul class="products__pagination">
           <li class="products__pagination__item">
-            <a class="products__pagination__link" href="catalog-1.html"aria-label="Переход на первую страницу">1</a>
+            <a class="products__pagination__link" href="catalog-1.html" aria-label="Переход на первую страницу">1</a>
           </li>
           <li class="products__pagination__item">
             <a class="products__pagination__link pagination__link-current" aria-label="Текущая страница, вторая">2</a>
@@ -251,63 +219,63 @@
       </section>
     </main>
     <footer class="page-footer">
-        <p class="page-footer__contacts">
-          Барбершоп &laquo;Borodinski&raquo;<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
-          Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
-        </p>
-        <div class="page-footer__social">
-          <b class="page-footer__bold-text">Давайте дружить!</b>
-          <ul class="page-footer__social-list">
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
-            </li>
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
-            </li>
-            <li class="page-footer__social-item">
-              <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
-            </li>
-          </ul>
-        </div>
-        <p class="page-footer__copyright">
-          <b class="page-footer__bold-text">Разработано:</b>
-          <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
-        </p>
-      </footer>
+      <p class="page-footer__contacts">
+        Барбершоп &laquo;Borodinski&raquo;<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
+        Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
+      </p>
+      <div class="page-footer__social">
+        <b class="page-footer__bold-text">Давайте дружить!</b>
+        <ul class="page-footer__social-list">
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
+          </li>
+          <li class="page-footer__social-item">
+            <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
+          </li>
+        </ul>
+      </div>
+      <p class="page-footer__copyright">
+        <b class="page-footer__bold-text">Разработано:</b>
+        <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+      </p>
+    </footer>
 
-      <section class="modal modal-login">
-        <h2 class="modal-login__headline">Личный кабинет</h2>
-        <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
-        <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
-          <p class="modal-login__form-paragraph">
-            <label class="visually-hidden" for="user-login">Логин</label>
-            <input class="modal-login__form-input" type="text" name="login" id="user-login" placeholder="Логин">
-          </p>
-          <p class="modal-login__form-paragraph">
-            <label class="visually-hidden" for="user-password">Пароль</label>
-            <input class="modal-login__form-input" type="password" name="login" id="user-password" placeholder="Пароль">
-          </p>
-          <p class="modal-login__form-paragraph">
-            <label class="modal-login__form-label" for="remember-me">
-              <input class="visually-hidden" type="checkbox" name="remember" id="remember-me" checked>
-              <span class="modal-login__form-indicator"></span>
-              Запомните меня
-            </label>
-            <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
-          </p>
-          <button class="modal-login__form-submit" type="submit">Войти</button>
-        </form>
-        <button class="modal-close"></button>
-      </section>
+    <section class="modal modal-login">
+      <h2 class="modal-login__headline">Личный кабинет</h2>
+      <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
+      <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="modal-login__form-paragraph">
+          <label class="visually-hidden" for="user-login">Логин</label>
+          <input class="modal-login__form-input" type="text" name="login" id="user-login" placeholder="Логин">
+        </p>
+        <p class="modal-login__form-paragraph">
+          <label class="visually-hidden" for="user-password">Пароль</label>
+          <input class="modal-login__form-input" type="password" name="login" id="user-password" placeholder="Пароль">
+        </p>
+        <p class="modal-login__form-paragraph">
+          <label class="modal-login__form-label" for="remember-me">
+            <input class="visually-hidden" type="checkbox" name="remember" id="remember-me" checked>
+            <span class="modal-login__form-indicator"></span>
+            Запомните меня
+          </label>
+          <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
+        </p>
+        <button class="modal-login__form-submit button" type="submit">Войти</button>
+      </form>
+      <button class="modal-close" type="button"></button>
+    </section>
 
-      <section class="modal modal-map">
-        <h2 class="visually-hidden">Как до нас добраться</h2>
-        <a class="modal-map__link" href="https://yandex.ru/maps" aria-label="Яндекс карты" target="_blank">
-          <img class="modal-map__img" src="img/map.jpg" width="766" height="560" alt="Карта">
-        </a>
-        <button class="modal-close"></button>
-      </section>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <p class="modal-map__pic">
+        <img class="modal-map__img" src="img/map.jpg" width="766" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+      </p>
+      <button class="modal-close" type="button"></button>
+    </section>
   </body>
 </html>
