--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </p>
         <button class="modal-login__form-submit button" type="submit">Войти</button>
       </form>
-      <button class="modal-close" type="button"></button>
+      <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
 
     <section class="modal modal-map">
@@ -181,7 +181,7 @@
       <p class="modal-map__pic">
         <img class="modal-map__img" src="img/map.jpg" width="766" height="560" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
       </p>
-      <button class="modal-close" type="button"></button>
+      <button class="modal-close" type="button" aria-label="Закрыть"></button>
     </section>
 
     <p class="visibility-hidden">Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
